<resources>
    <string name="app_name">Fridge Fresh</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="passwd">Contraseña:</string>
    <string name="email">Correo electrónico</string>
    <string name="email2">Email:</string>
    <string name="back">Atrás</string>
    <string name="texto_contenedor">Hola! "Usuario", Primero añada los productos que tiene en su almacén</string>
    <string name="nombre_contenedor">Nombre del contenedor:</string>
    <string name="hint_contenedor">Contenedor 1</string>
    <string name="descripcion">Descripcion(Opcional)</string>
    <string name="hint_descripcion">Esta es una descripción</string>
    <string name="saludo_principal">Hola, \"Usuario\"</string>
    <string name="listas">Listas</string>
    <string name="contenedor">Contenedor</string>
    <string name="venc">Vencen pronto</string>
    <string name="logout">Cerrar sesión</string>
    <string name="siguiente">Siguiente</string>
    <string name="contenedor_1">Contenedor 1</string>
    <string name="producto_1">Producto 1</string>
    <string name="vista_detallada">Vista Detallada</string>
    <string name="vista_compacta">Vista Compacta</string>
    <string name="modificar">Modificar</string>
    <string name="product_list">Lista: %1$s</string>
    <string name="product_expiration_date">Fecha de vencimiento: %1$s</string>
    <string name="product_quantity">Cantidad: %1$d</string>
    <string name="product_status">Estado: %1$s</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="nueva_password">Nueva password:</string>
    <string name="producto">Producto</string>
    <string name="fecha">Fecha</string>
    <string name="vencidos">Vencidos</string>
    <string name="vencen_pronto">Vencen pronto</string>
    <string name="lista_1">Lista 1</string>
    <string name="combinar_con">Combinar con</string>
    <string name="productos_add">Productos añadidos</string>
    <string name="añadir">+</string>
    <string name="eliminar">-</string>
    <string name="combinar">Combinar</string>
    <string name="eliminar_texto">Eliminar</string>
    <string name="chequear">Chequear</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="agregar_a_contenedor">Agregar a Contenedor</string>
    <string name="productos_comunes">Productos Comunes</string>
    <string name="_0">0</string>
    <string name="de_lista1">De: lista1</string>
    <string name="fecha_ejemplo">01/01/2001</string>
    <string name="unidades_ejemplo">10 unidades</string>
    <string name="estado_vencido">Estado: Vencido</string>
    <string name="eliminar_del_contenedor">Eliminar del Contenedor</string>
    <string name="nombre_de_la_lista">Nombre de la Lista</string>
    <string name="x_productos">X productos</string>
    <string name="agregar_a_la_lista">Agregar a la lista</string>
    <string name="eliminar_lista">Eliminar lista(s)</string>
</resources>