<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:text="@string/producto_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/de_lista1"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nombre"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/fecha_ejemplo"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nombre"
        app:layout_constraintStart_toEndOf="@id/tv_lista"
        />
    <TextView
        android:id="@+id/tv_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/unidades_ejemplo"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_lista"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/estado_vencido"
        android:layout_marginStart="12dp"
        android:textColor="#BF1919"
        app:layout_constraintTop_toBottomOf="@id/tv_fecha"
        app:layout_constraintStart_toEndOf="@id/tv_cantidad"
        />

</androidx.constraintlayout.widget.ConstraintLayout>