<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearContenedorActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="96dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/back"
        android:scaleType="centerCrop"
        android:layout_marginTop="15dp"
        android:src="@drawable/flecha_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_contenedor"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="26sp"
        android:textAlignment="center"
        android:text="@string/texto_contenedor"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_name_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_contenedor"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_contenedor"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_contenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contenedor"
        android:backgroundTint="@color/white"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_name_cont"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_contenedor"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/hint_descripcion"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>