<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="15dp"
    android:layout_width="350dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/producto_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_lista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/de_lista1"
            app:layout_constraintTop_toBottomOf="@id/tv_nombre"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/fecha_ejemplo"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nombre"
            app:layout_constraintStart_toEndOf="@id/tv_lista"
            />
        <TextView
            android:id="@+id/tv_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/unidades_ejemplo"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_lista"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/estado_vencido"
            android:layout_marginStart="12dp"
            android:textColor="#BF1919"
            app:layout_constraintTop_toBottomOf="@id/tv_fecha"
            app:layout_constraintStart_toEndOf="@id/tv_cantidad"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_producto"
            app:layout_constraintTop_toTopOf="@id/tv_nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_cantidad"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>