<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarContenedorActivity">


    <!-- Botones estáticos -->
    <Button
        android:id="@+id/btn_plus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/añadir"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/eliminar"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/back"
        android:scaleType="centerCrop"
        android:layout_marginTop="15dp"
        android:src="@drawable/flecha_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productos_add"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp" />

    <!-- RecyclerView para los productos -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_modificar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>