<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/images"
    android:layout_height="match_parent"
    tools:context=".ListasActivity">



    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/back"
        android:scaleType="centerCrop"
        android:layout_marginTop="15dp"
        android:src="@drawable/flecha_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_la_lista"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Ese" />

    <Button
        android:id="@+id/btnCombinar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/combinar"
        android:textSize="25sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLists"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>